fixed overflow on body, added pause functionality on node select

--- a/vis/css/style.css
+++ b/vis/css/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   padding: 0;
   height:100%;
+  width: 100%;
+  overflow-y: hidden;
+  position: fixed;
 }
 
 rect {
